objects/AvaAcctSeed__isocodelist__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>AvaAcctSeed__country_isocode_1__c</fullName>
        <label>country isocode 1</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AvaAcctSeed__country_isocode_2__c</fullName>
        <label>country isocode 2</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AvaAcctSeed__country_name__c</fullName>
        <label>country name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AvaAcctSeed__state_isocode__c</fullName>
        <label>state isocode</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>IsoCodeList</label>
</CustomObject>